# mkmotd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debian/: changelog  control
man/man1/: mkmotd.1
redhat/: build.sh  mkmotd.spec
src/: config.h.in  mkmotd.c  utils.c  utils.h
